--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a 
                         title="How to use the software" 
                         alt="Documents how the software can be used" 
-                        href="https://github.com/dune3d/dune3d/tree/main#readme">Documentation</a></li>
+                        href="https://docs.dune3d.org">Documentation</a></li>
                 </ul>
             </div>
             <div id="contribute">
