update landing page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
                         title="How to use the software" 
                         alt="Documents how the software can be used" 
                         href="https://docs.dune3d.org">Documentation</a></li>
+                    <li><a 
+                        title="Releases page on GitHub" 
+                        alt="Get the software here" 
+                        href="https://github.com/dune3d/dune3d/releases/latest">Download</a></li>
+                    <li><a
+                        title="Ask questions on GitHub Discussions"
+                        alt="Ask questions on GitHub Discussions"
+                        href="https://github.com/dune3d/dune3d/discussions">GitHub Discussions</a></li>
                 </ul>
             </div>
             <div id="contribute">
